Updates assertion to use getFirst() on list
Updates the assertion in UserMapperTest to use getFirst()
instead of get(0) when retrieving the first element from
a list. This change improves code readability and maintainability.